# PeerReview

./: .env  Dockerfile  README.txt  database.sqlite3
MandelbrotWASM/: Cargo.toml  README.md
MandelbrotWASM/src/: lib.rs
backend/: database.sql  go.mod  go.sum  main.go
backend/api/: api.go  api_test.go  article.go  article_test.go  assets.go  assets_test.go  authors.go  authors_test.go  login.go  login_test.go  recent.go  recent_test.go  search.go  search_test.go  tags.go  tags_test.go
backend/config/: config.go
backend/database/: database.go  schema.go  utils.go
backend/parse/: parse.go
backend/schema/: schema.go
backend/server/: article.go  assets.go  error.go  path.go
frontend/css/: index.css  index.css.map  index.sass
frontend/error/: 404.html  500.html
frontend/html/: about.html  article.gohtml  contact.html  landingpage.gohtml  legal-notice.html
frontend/js/: api.js  api.js.map  api.ts  main.js  main.js.map  main.ts  tsconfig.json
