[package]
name = "canvas_wasm"
version = "0.1.0"
edition = "2021"
authors = ["David Maul <ceo@kobaltsolutions.org"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.78"
num = "0.4.0"
